--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
     </section>
 
+
     <section class="section section-features" id="features">
         <div class="container">
             <h2 class="section-title">Chức năng sản phẩm</h2>
@@ -105,7 +106,7 @@
                         <li>Đánh giá mức độ phù hợp</li>
                     </ul>
                     <div class="feature-cta">
-                        <a href="https://offical-hr-support.vercel.app/" target="_blank" class="feature-btn">Dùng ngay</a>
+                        <a href="https://hr-support.vercel.app/" target="_blank" class="feature-btn">Dùng ngay</a>
                     </div>
                 </article>
                 <article class="feature-card">
@@ -294,6 +295,7 @@
                 const rawLogos = [
                     { src: 'images/logos/fpt.png', alt: 'Đối tác FPT' },
                     { src: 'images/logos/topcv.png', alt: 'Đối tác TopCV' },
+                    { src: 'images/logos/mì ai.png', alt: 'Đối tác Mì AI' },
                     { src: 'images/logos/vinedimex.jpg', alt: 'Đối tác Vinedimex' },
                     { src: 'images/logos/2.jpg', alt: 'Đối tác 2' },
                     { src: 'images/logos/hb.jpg', alt: 'Đối tác HB' },
