--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
              Remember to actually rename & move files in repo to match these new paths before deploy.
         -->
         <link rel="icon" type="image/jpg" href="images/logos/logo.jpg">
+        <!-- Google Search Console verification -->
+        <meta name="google-site-verification" content="uKr_cU82l88Nml_Uh_GvvLNha5eZgYapg5T5QLQALyY" />
 </head>
 <body>
     <header class="site-header" id="top">
