--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <h3>Liên hệ</h3>
                     <p>Email: support@supporthr.vn</p>
                     <p>SĐT: 0123.456.789</p>
-                    <p>FPT School Hải Phòng</p>
+                    <p>TechFuture AI </p>
                 </div>
                 <div class="footer-links">
                     <h3>Liên kết</h3>
@@ -389,4 +389,5 @@
     </script>
 </body>
 </html>
+
 
