--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="canonical" href="https://www.supporthr-tf.com.vn/">
         <link rel="icon" type="image/jpg" href="images/logos/logo.jpg">
         <!-- Google Search Console verification -->
         <meta name="google-site-verification" content="uKr_cU82l88Nml_Uh_GvvLNha5eZgYapg5T5QLQALyY" />
+    
 </head>
 <body>
     <header class="site-header" id="top">
@@ -389,5 +391,6 @@
     </script>
 </body>
 </html>
+
 
 
