--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SupportHR | AI tuyển dụng & quản lý nhân sự thông minh</title>
-    <meta name="description" content="SupportHR cung cấp AI tuyển dụng: lọc & chấm điểm CV theo JD, chuẩn hóa mô tả công việc, dashboard HR giúp doanh nghiệp tối ưu nhân sự hiệu quả.">
+    <title>SupportHR – AI tuyển dụng thông minh</title>
+    <meta name="description" content="Tự động lọc & chấm điểm CV theo JD, chuẩn B-5-2, gợi ý phỏng vấn. Dùng thử miễn phí – triển khai nhanh.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -13,8 +13,8 @@
     <link rel="canonical" href="https://www.supporthr-tf.com.vn/">
     <meta name="theme-color" content="#184176">
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="SupportHR | AI tuyển dụng & quản lý nhân sự thông minh">
-    <meta property="og:description" content="Giải pháp AI: lọc & chấm điểm CV theo JD, chuẩn hóa JD, dashboard HR trực quan – tăng tốc tuyển dụng cho doanh nghiệp.">
+    <meta property="og:title" content="SupportHR – AI tuyển dụng thông minh">
+    <meta property="og:description" content="Tự động lọc & chấm điểm CV theo JD, chuẩn B-5-2, gợi ý phỏng vấn. Dùng thử miễn phí – triển khai nhanh.">
     <meta property="og:url" content="https://www.supporthr-tf.com.vn/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="SupportHR">
@@ -23,24 +23,42 @@
     <meta property="og:image:alt" content="SupportHR AI tuyển dụng và quản lý nhân sự">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="SupportHR | AI tuyển dụng & quản lý nhân sự thông minh">
-    <meta name="twitter:description" content="SupportHR lọc & chấm điểm CV, chuẩn hóa JD, dashboard HR – Nền tảng AI cho nhân sự hiện đại.">
+    <meta name="twitter:title" content="SupportHR – AI tuyển dụng thông minh">
+    <meta name="twitter:description" content="Tự động lọc & chấm điểm CV theo JD, chuẩn B-5-2, gợi ý phỏng vấn. Dùng thử miễn phí – triển khai nhanh.">
     <meta name="twitter:image" content="https://www.supporthr-tf.com.vn/images/og-cover.jpg">
     <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-    "name": "SupportHR",
-      "url": "https://www.supporthr-tf.com.vn/",
-    "logo": "https://www.supporthr-tf.com.vn/images/logos/logo.jpg",
-      "sameAs": [
-        "https://www.facebook.com/supporthrtf",
-        "https://www.linkedin.com/company/supporthr-tf"
-      ]
-    }
-    </script>
-        <link rel="icon" type="image/jpg" href="images/logos/logo.jpg">
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="32x32">
+        <link rel="icon" type="image/png" href="/icon-48.png" sizes="48x48">
+        <link rel="icon" type="image/png" href="/icon-192.png" sizes="192x192">
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "SupportHR",
+            "url": "https://www.supporthr-tf.com.vn/",
+            "logo": "https://www.supporthr-tf.com.vn/images/logos/logo.jpg",
+            "sameAs": [
+                "https://www.facebook.com/supporthrtf",
+                "https://www.linkedin.com/company/supporthr-tf"
+            ]
+        }
+        </script>
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "url": "https://www.supporthr-tf.com.vn/",
+            "name": "SupportHR",
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://www.supporthr-tf.com.vn/?s={search_term_string}",
+                "query-input": "required name=search_term_string"
+            }
+        }
+        </script>
+    <!-- Legacy logo fallback (optional) -->
+    <link rel="icon" type="image/jpg" href="images/logos/logo.jpg">
         <!-- Google Search Console verification -->
         <meta name="google-site-verification" content="uKr_cU82l88Nml_Uh_GvvLNha5eZgYapg5T5QLQALyY" />
     <!-- NOTE: Add an actual 1200x630 image at /images/og-cover.jpg for best sharing appearance -->
