--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="canonical" href="https://www.supporthr-tf.com.vn/">
     <meta name="theme-color" content="#184176">
+    <!-- Vercel Analytics -->
+    <script defer src="https://vercel.com/analytics/script.js" data-token="YOUR_VERCEL_ANALYTICS_TOKEN"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="SupportHR – AI tuyển dụng thông minh">
     <meta property="og:description" content="Tự động lọc & chấm điểm CV theo JD, chuẩn B-5-2, gợi ý phỏng vấn. Dùng thử miễn phí – triển khai nhanh.">
@@ -65,6 +67,7 @@
     
 </head>
 <body>
+    <noscript><p style="position:absolute;left:-9999px;">Analytics disabled (no JS)</p></noscript>
     <header class="site-header" id="top">
         <div class="container">
             <div class="header-inner">
